k8s-manifests/contour/external-gw.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: contour-external
spec:
  controller: projectcontour.io/projectcontour/contour-external
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour-external
spec:
  controllerName: projectcontour.io/gateway-controller
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour-external
  namespace: projectcontour
spec:
  gatewayClassName: contour-external
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
