k8s-manifests/contour/internal-gw.yaml
#apiVersion: networking.k8s.io/v1
#kind: IngressClass
#metadata:
#  annotations:
#    ingressclass.kubernetes.io/is-default-class: "true"
#  name: contour-internal
#spec:
#  controller: projectcontour.io/projectcontour/contour-internal
#---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour-internal
spec:
  controllerName: projectcontour.io/gateway-controller
  parametersRef:
    kind: ContourDeployment
    group: projectcontour.io
    name: contour-internal
    namespace: projectcontour
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour-internal
  namespace: projectcontour
spec:
  gatewayClassName: contour-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
